# advanced-android

01.Security/app/: app-release.apk  build.gradle
01.Security/app/src/main/: AndroidManifest.xml
01.Security/gradle/wrapper/: gradle-wrapper.properties
02.NDK/: TODO
02.NDK/app/: build.gradle  proguard-rules.pro
02.NDK/app/src/main/: AndroidManifest.xml
02.NDK/app/src/main/cpp/: CMakeLists.txt  hello-jni.c  hello-jni.cpp
02.NDK/gradle/wrapper/: gradle-wrapper.properties
02.SocialSharing/: build.gradle
02.SocialSharing/app/: app-release.apk  build.gradle
02.SocialSharing/app/src/main/: AndroidManifest.xml
02.SocialSharing/gradle/wrapper/: gradle-wrapper.properties
03.SyncAdapter/app/: build.gradle
03.SyncAdapter/app/src/main/: AndroidManifest.xml
03.SyncAdapter/gradle/wrapper/: gradle-wrapper.properties
05.Location/app/: build.gradle
05.Location/app/src/main/: AndroidManifest.xml
05.Location/gradle/wrapper/: gradle-wrapper.properties
06.Performance/: conf.txt  test.txt
06.Performance/app/: build.gradle
06.Performance/app/src/main/: AndroidManifest.xml
06.Performance/gradle/wrapper/: gradle-wrapper.properties
07.Threading/app/: build.gradle
07.Threading/app/src/main/: AndroidManifest.xml
07.Threading/gradle/wrapper/: gradle-wrapper.properties
08.Permissions/app/: build.gradle  proguard-rules.pro
08.Permissions/gradle/wrapper/: gradle-wrapper.properties
09.WebView/01.Simple/app/: build.gradle
PermissionTest/app/: build.gradle
PermissionTest/gradle/wrapper/: gradle-wrapper.properties
(+88 files in other folders)
